tests/ui/try-trait/deep-try-chain-issue-153583.stderr
error[E0277]: the `?` operator can only be applied to values that implement `Try`
  --> $DIR/deep-try-chain-issue-153583.rs:6:5
   |
LL |     0???????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????????...
   |     ^^ the `?` operator cannot be applied to type `{integer}`
   |
   = help: the nightly-only, unstable trait `Branch` is not implemented for `{integer}`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
